Prevent horizontal scrollbars in the nav

--- a/src/app/components/mainNav.module.css
+++ b/src/app/components/mainNav.module.css
@@ -10,4 +10,6 @@
 
 .mainNav nav {
   max-width: var(--max-sidebar-width);
+  overflow-x: hidden;
+  overflow-y: auto;
 }
